# moral-preferences

./: .gitignore  CUSTOMIZATION_GUIDE.md  LICENSE  PLOTTING_README.md  README.md  SYNTHETIC_COMPARISON_README.md  VARIANCE_ANALYSIS_README.md  __init__.py  characters.csv  create_inconsistency_comparison_plot.py  create_prompts_variance_plots.py  create_prompts_variance_table.py  create_runs_variance_plots.py  create_runs_variance_table.py  create_table_plot.py  create_variance_plot.py  demo_plotting.py  demo_variance_analysis.py  example_plotting.py  example_usage.py  generate_questions.py  install.py  main.py  measure_ranking_variance.py  moral_preferences.py  plotting_utils.py  produce_rankings.py  pyproject.toml  question_config.py  questions.json  questions2.json  requirements.txt  run_full_evaluation.py  run_matches.py  synthetic_ranking_comparison.py  tmp.json
analysis/: __init__.py  generate_performance_table.py  optimize_rankings.py  regenerate_results.py  variance_analysis.py  variance_plotting.py
core/: __init__.py  generate_questions.py  produce_rankings.py  run_matches.py
examples/: __init__.py  advanced_analysis.py  basic_usage.py
logs/: clean_performance_table.csv  performance_summary.csv  performance_summary_example.csv
question-configs/: custom_config.json  custom_prompts.json  custom_rubric.txt  default.json  default_prompts.json  default_rubric.txt
scripts/: PACKAGE_OVERVIEW.md  README.md  characters.csv  characters_abridged.csv  example_usage.py  file_utils.py  generate_questions.py  moral preference_10_qs.json  moral preference_5_qs.json  (+10 more)
(+2136 files in other folders)
