[project]
name = "ranking-characters"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.58.2",
    "bayesian-optimization>=3.1.0",
    "dotenv>=0.9.9",
    "inspect-ai>=0.3.114",
    "instructor>=1.10.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "openai>=1.97.0",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pulp>=3.2.1",
    "pyarrow>=21.0.0",
    "scikit-optimize>=0.10.2",
    "scipy>=1.16.0",
    "tabulate>=0.9.0",
    "together>=1.5.21",
]
